RESOLVED FIXED 128796
Kill some of the last vestiges of the C++ interpreter's PICs
https://bugs.webkit.org/show_bug.cgi?id=128796
Summary Kill some of the last vestiges of the C++ interpreter's PICs
Filip Pizlo
Reported 2014-02-13 20:31:03 PST
Patch forthcoming.
Attachments
the patch (24.25 KB, patch)
2014-02-13 20:31 PST, Filip Pizlo
msaboff: review+
the patch (25.36 KB, patch)
2014-02-13 20:57 PST, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2014-02-13 20:31:47 PST
Created attachment 224154 [details] the patch
WebKit Commit Bot
Comment 2 2014-02-13 20:34:04 PST
Attachment 224154 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _stubRoutine is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _base is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _chain is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _isDirect is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _count is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 5 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 3 2014-02-13 20:57:06 PST
Created attachment 224157 [details] the patch Still R=michael, trying to fix the build.
WebKit Commit Bot
Comment 4 2014-02-13 20:58:50 PST
Attachment 224157 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _stubRoutine is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _base is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _chain is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _isDirect is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/JavaScriptCore/bytecode/PolymorphicAccessStructureList.h:67: _count is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 5 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 5 2014-02-13 21:35:25 PST
Note You need to log in before you can comment on or make changes to this bug.