Source/JavaScriptCore/bytecode/BytecodeUseDef.h
@@ -99,13 +99,10 @@ void computeUsesForBytecodeOffset(
         return;
     }
     case op_put_by_index:
-    case op_put_by_id_replace:
-    case op_put_by_id_transition:
     case op_put_by_id_transition_direct:
     case op_put_by_id_transition_direct_out_of_line:
     case op_put_by_id_transition_normal:
     case op_put_by_id_transition_normal_out_of_line:
-    case op_put_by_id_generic:
     case op_put_by_id_out_of_line:
     case op_put_by_id:
     case op_put_to_scope: {
@@ -126,18 +123,7 @@ void computeUsesForBytecodeOffset(
     case op_to_primitive:
     case op_get_by_id:
     case op_get_by_id_out_of_line:
-    case op_get_by_id_self:
-    case op_get_by_id_proto:
-    case op_get_by_id_chain:
-    case op_get_by_id_getter_self:
-    case op_get_by_id_getter_proto:
-    case op_get_by_id_getter_chain:
-    case op_get_by_id_custom_self:
-    case op_get_by_id_custom_proto:
-    case op_get_by_id_custom_chain:
-    case op_get_by_id_generic:
     case op_get_array_length:
-    case op_get_string_length:
     case op_get_arguments_length:
     case op_typeof:
     case op_is_undefined:
@@ -291,13 +277,10 @@ void computeDefsForBytecodeOffset(CodeBlock* codeBlock, unsigned bytecodeOffset,
     case op_switch_string:
     case op_put_by_id:
     case op_put_by_id_out_of_line:
-    case op_put_by_id_replace:
-    case op_put_by_id_transition:
     case op_put_by_id_transition_direct:
     case op_put_by_id_transition_direct_out_of_line:
     case op_put_by_id_transition_normal:
     case op_put_by_id_transition_normal_out_of_line:
-    case op_put_by_id_generic:
     case op_put_getter_setter:
     case op_put_by_val:
     case op_put_by_val_direct:
@@ -330,18 +313,7 @@ void computeDefsForBytecodeOffset(CodeBlock* codeBlock, unsigned bytecodeOffset,
     case op_construct:
     case op_get_by_id:
     case op_get_by_id_out_of_line:
-    case op_get_by_id_self:
-    case op_get_by_id_proto:
-    case op_get_by_id_chain:
-    case op_get_by_id_getter_self:
-    case op_get_by_id_getter_proto:
-    case op_get_by_id_getter_chain:
-    case op_get_by_id_custom_self:
-    case op_get_by_id_custom_proto:
-    case op_get_by_id_custom_chain:
-    case op_get_by_id_generic:
     case op_get_array_length:
-    case op_get_string_length:
     case op_check_has_instance:
     case op_instanceof:
     case op_get_by_val:
